--- a/public/imgs/.htaccess
+++ b/public/imgs/.htaccess
@@ -1,7 +1,7 @@
 Order allow,deny
 Deny from all
 
-<FilesMatch "\.(png|ico)$|^$">
+<FilesMatch "\.(png|ico|jpg)$|^$">
     Order deny,allow
     Allow from all
 </FilesMatch>
