--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ _ide_helper.php
 /public/libs/angular
 /public/libs/jquery
 /public/packages
+/public/css/bootstrap
+/public/css/font-awesome
+/public/fonts
